# procure-to-pay-system

./: .gitignore  README.md
backend/: .env.example  .env.production  Dockerfile  docker-compose.yml  manage.py  pyproject.toml
backend/apps/approvals/: admin.py  apps.py  models.py  serializers.py  urls.py
backend/apps/approvals/migrations/: 0001_initial.py
backend/apps/documents/: admin.py  ai_service.py  models.py  serializers.py  tasks.py  utils.py
backend/apps/documents/migrations/: 0001_initial.py  0002_receiptmetadata.py
backend/apps/notifications/: tasks.py
backend/apps/po/: admin.py  apps.py  models.py  serializers.py  urls.py  views.py
backend/apps/po/migrations/: 0001_initial.py
backend/apps/requests/: admin.py  apps.py  models.py  permissions.py  serializers.py  urls.py  views.py
backend/apps/requests/migrations/: 0001_initial.py  0002_initial.py  0003_purchaserequest_clarification_message_and_more.py
backend/apps/users/: models.py  permissions.py  serializers.py  urls.py  views.py
backend/apps/users/management/commands/: seed_users.py
backend/apps/users/migrations/: 0001_initial.py
backend/backend/: celery.py  urls.py  wsgi.py
backend/backend/settings/: base.py  local.py  production.py
backend/tests/: test_approvals.py  test_documents.py  test_requests.py  test_users.py
frontend/: .env.production  README.md  index.html  netlify.toml  package-lock.json  package.json  tailwind.config.js  vite.config.ts
frontend/netlify/functions/: api.js
frontend/src/: App.tsx  index.css  test-types.ts
frontend/src/components/: Layout.tsx  (+12 more)
(+19 files in other folders)
